created html scaffolding, added back-ground image

--- a/index.html
+++ b/index.html
@@ -4,12 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign-Up Form Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="script.js"></script>
+    <main>
+        <div class="header">
+            <h1>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</h1>
+
+            <h2>
+                You <em>know</em> you want to.
+            </h2>
+        </div>
+
+        <div class="form">
+            <h2>
+                Let's do this!
+            </h2>
+            <form action="">
+                <label for="firstName">First Name</label>
+                <input type="text" name="firstName">
+
+                <label for="lastName">Last Name</label>
+                <input type="text" name="lastName">
+
+                <label for="email">Email</label>
+                <input type="email" name="email">
+
+                <label for="phoneNumber">Phone Number</label>
+                <input type="number" name="phoneNumber">
+
+                <label for="password">Password</label>
+                <input type="password" name="password">
+
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" name="confirmPassword">
+            </form>
+        </div>
+
+        <div class="button">
+            <button>Create Account</button>
+            <p>Already have an account? <a href="#">Log in</a></p>
+        </div>
+    </main>
 </body>
 
 </html>
