--- a/index.html
+++ b/index.html
@@ -8,45 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <div class="header">
-            <h1>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started</h1>
-
-            <h2>
-                You <em>know</em> you want to.
-            </h2>
+    <div class="form-container">
+        <div class="side-hero">
+            <div class="odin-image">
+                <img src="/images/odin-lined.png" alt="odin-icon">
+            </div>
         </div>
-
-        <div class="form">
-            <h2>
-                Let's do this!
-            </h2>
-            <form action="">
-                <label for="firstName">First Name</label>
-                <input type="text" name="firstName">
-
-                <label for="lastName">Last Name</label>
-                <input type="text" name="lastName">
-
-                <label for="email">Email</label>
-                <input type="email" name="email">
-
-                <label for="phoneNumber">Phone Number</label>
-                <input type="number" name="phoneNumber">
-
-                <label for="password">Password</label>
-                <input type="password" name="password">
-
-                <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword">
-            </form>
+        <div class="form-section">
+            <div class="header">
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+            </div>
+            <div class="input-section">
+                <h2>Let's do this!</h2>
+            </div>
+            <div class="submit-section"></div>
         </div>
-
-        <div class="button">
-            <button>Create Account</button>
-            <p>Already have an account? <a href="#">Log in</a></p>
-        </div>
-    </main>
+    </div>
 </body>
-
 </html>
