fixed spacing in between flex items, added @mediaqueri

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div class="form-container">
         <div class="side-hero">
-            <div class="odin-image">
+            <div class="odin-container">
                 <img src="/images/odin-lined.png" alt="odin-icon">
+                <h1>ODIN</h1>
             </div>
         </div>
         <div class="form-section">
