completed html scafolding

--- a/index.html
+++ b/index.html
@@ -21,8 +21,49 @@
             </div>
             <div class="input-section">
                 <h2>Let's do this!</h2>
+
+                <form action="#">
+                    <div class="first-column">
+                        <div class="firstName">
+                            <label for="firstName">First Name</label>
+                            <input type="text" id="firstName">
+                        </div>
+
+                        <div class="email">
+                            <label for="email">Email</label>
+                            <input type="email">
+                        </div>
+
+                        <div class="password">
+                            <label for="password">Password</label>
+                            <input type="password">
+                        </div>
+                    </div>
+
+                    <div class="second-column">
+                        <div class="lastName">
+                            <label for="lastName">Last Name</label>
+                            <input type="text" id="lastName">
+                        </div>
+
+                        <div class="phoneNumber">
+                            <label for="phoneNo">
+                                Phone Number
+                            </label>
+                            <input type="number">
+                        </div>
+
+                        <div class="confirmPassword">
+                            <label for="password">Confirm Password</label>
+                            <input type="Password">
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="submit-section"></div>
+            <div class="submit-section">
+                <button>Create Account</button>
+                <p>Aready have an account?<a href="#">Log in</a></p>
+            </div>
         </div>
     </div>
 </body>
