--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <div class="form-section">
             <div class="header">
                 <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.</p>
+
+                <p>You <em>know</em> you want to.</p>
             </div>
             <div class="input-section">
-                <h2>Let's do this!</h2>
+                <p>Let's do this!</p>
 
                 <form action="#">
                     <div class="first-column">
