--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
                         <div class="email">
                             <label for="email">Email</label>
-                            <input type="email">
+                            <input type="email" required>
                         </div>
 
                         <div class="password">
                             <label for="password">Password</label>
-                            <input type="password">
+                            <input type="password" required>
                         </div>
                     </div>
 
@@ -52,12 +52,12 @@
                             <label for="phoneNo">
                                 Phone Number
                             </label>
-                            <input type="number">
+                            <input type="number" required>
                         </div>
 
                         <div class="confirmPassword">
                             <label for="password">Confirm Password</label>
-                            <input type="Password">
+                            <input type="Password" required>
                         </div>
                     </div>
                 </form>
