--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                         <div class="password">
                             <label for="password">Password</label>
-                            <input type="password" required>
+                            <input id="passWord" type="password" required>
                         </div>
                     </div>
 
@@ -57,7 +57,7 @@
 
                         <div class="confirmPassword">
                             <label for="password">Confirm Password</label>
-                            <input type="Password" required>
+                            <input id="confirmPw" type="Password" required>
                         </div>
                     </div>
                 </form>
@@ -68,5 +68,6 @@
             </div>
         </div>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
