--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="form-container">
         <div class="side-hero">
             <div class="odin-container">
-                <img src="/images/odin-lined.png" alt="odin-icon">
+                <img src="./images/odin-lined.jpg" alt="odin-icon">
                 <h1>ODIN</h1>
             </div>
         </div>
